added hashcode to keep collections happy